<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsPocket</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Home screen -->
    
    <string name="latest">Latest</string>
    <string name="weather">Weather</string>
    <string name="business">Business</string>
    <string name="politics">Politics</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="and">and</string>
    <string name="environment">Environment</string>
    <string name="currencies">Currencies</string> 
    
    <!-- Settings Screen -->
    
    <string name="settings">SETTINGS</string>
    <string name="general">GENERAL</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="screen_orientation_text">Allows the orientation of the application to be locked, or to rotate automatically. Your device may override this if orientation settings have been applied elsewhere.</string>
    <string name="preferences">UPDATE PREFERENCES</string>
    <string name="news_updates">Automatic news updates</string>
    <string name="news_updates_text">Allow PocketNews to automatically download the latest news.</string>
    <string name="update_frequency">Update frequency</string>
    <string name="update_frequency_text">Select how often you would like your news to automatically update.</string>
    <string name="update_notifications">Update notifications</string>
    <string name="update_notifications_text">Show notification when PocketNews app updates.</string>
    <string name="update_sound">Update sound</string>
    <string name="update_sound_text">Play sound on update notification. Your device\'s notification sounds must also be enabled.</string>
    
    <string name="edit">EDIT</string>
    <string name="done">DONE</string>
    
    <!-- Color -->
    
    <color name="grey">#888888</color>
    <color name="black">#000000</color>
    <color name="summaryColor">#464646</color>
    <color name="updated">#a5a5a5</color>
    <color name="red">#c63737</color>
    <color name="action_bar">#c63737</color>

</resources>
